# ray_trace_challenge

./: .gitignore  Cargo.toml
ray_trace_challenge_derive/: Cargo.toml
ray_trace_challenge_derive/src/: lib.rs
src/: camera.rs  canvas.rs  colour.rs  cone.rs  cube.rs  cylinder.rs  group.rs  hittable.rs  intersection.rs  lib.rs  lighting.rs  main.rs  material.rs  matrix.rs  pattern.rs  plane.rs  ray.rs  sphere.rs  vec3.rs  world.rs
src/group/: tree.rs
