[package]
name = "ray_trace_challenge"
version = "0.1.0"
authors = ["Thom May <thom@may.lt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest

[dependencies]
num = "0.2"
anyhow = "1.0"

[dev-dependencies]
cucumber = { package = "cucumber_rust", version = "^0.6.0" }