[package]
name = "ray_trace_challenge"
version = "0.1.0"
authors = ["Thom May <thom@may.lt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2"
anyhow = "1.0"
lazy_static = "1.4.0"
ray_trace_challenge_derive = {path = "ray_trace_challenge_derive"}